fix(ZiltagMapPage): fix avatar squashed problem
close #188

--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -29,6 +29,8 @@
 .ziltag-ziltag-map-page__ziltag-user-avatar {
   width: 40px;
   height: 40px;
+  min-width: 40px;
+  min-height: 40px;
 }
 
 .ziltag-ziltag-map-page__ziltag-user-name {
